--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,900&display=swap");
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -11855,5 +11856,107 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.dropdown-menu {
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(3.5px);
+  -webkit-backdrop-filter: blur(3.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 
-/*# sourceMappingURL=custom.css.map */
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-item:hover {
+  background-color: #ffc107;
+}
+
+.menu {
+  object-fit: cover;
+  position: absolute;
+  width: 100vw;
+  z-index: 999;
+}
+.menu li {
+  padding: 0 0.7rem;
+}
+.menu li a {
+  font-family: "Poppins";
+  color: #fff !important;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.nav-link:hover,
+.navbar-brand:hover {
+  color: #ffc107 !important;
+}
+
+.navbar-brand {
+  color: #fff !important;
+  font-family: "Poppins";
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.navbar {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") ;
+}
+
+.navbar-toggler {
+  border: 2px solid #fff;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+.brand-logo:hover {
+  animation: bounce 0.5s;
+}
+
+@media (max-width: 575.98px) {
+  .sign-in-img {
+    display: none;
+  }
+}
+
+@media (min-width: 576px) {
+  .your-meal {
+    display: none;
+  }
+}
+
+.c-item {
+  height: 480px;
+}
+
+.c-img {
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(0.6);
+}
+
+.dtl-ico:hover {
+  color: #ffc107 !important;
+}
+
+.buger-main {
+  height: 200px;
+  width: 50px;
+}
+
+.social-ico:hover {
+  color: #ffc107;
+}
+
+/*# sourceMappingURL=main.css.map */
